# defspec

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: check.yml  pages.yml  release.yml
defspec/: __init__.py  server.py  spec.py  template.py
docs/source/: api.md  conf.py  example.md  index.md  robots.txt
examples/: falcon_openapi.py  flask_openapi.py  offline_openapi.py  save_to_one_file.py
reapi/: __init__.py  spec.py
tests/: test_spec.py
