[project]
name = "defspec"
dynamic = ["version"]
description = "OpenAPI spec generation and web page rendering."
authors = [{ name = "Keming", email = "kemingy94@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "msgspec~=0.19.0",
    "typing_extensions~=4.9; python_version < '3.11'",
]
[project.optional-dependencies]
dev = [
    "ruff~=0.8.0",
    "pytest~=7.4",
    "attrs~=23.2",
]
offline = ["offapi~=0.1.0"]
[project.urls]
"Homepage" = "https://github.com/kemingy/defspec"
[project.scripts]

[build-system]
requires = ["setuptools", "setuptools_scm>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
target-version = "py39"
[tool.ruff.lint]
select = ["E", "F", "G", "B", "I", "SIM", "TID", "PL", "RUF"]
ignore = ["E501"]
[tool.ruff.lint.isort]
known-first-party = ["defspec"]
[tool.ruff.lint.pylint]
max-args = 12
