[project]
name = "defspec"
dynamic = ["version"]
description = "OpenAPI spec generation and web page rendering."
authors = [{ name = "Keming", email = "kemingy94@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "msgspec>=0.19.0",
    "typing-extensions~=4.9 ; python_full_version < '3.11'",
]
[project.optional-dependencies]
offline = [
    "offapi>=0.1.0",
]
[project.urls]
"Homepage" = "https://github.com/kemingy/defspec"
[project.scripts]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"
write_to = "defspec/__version__.py"
write_template = "__version__ = '{}'"

[tool.ruff]
target-version = "py39"
[tool.ruff.lint]
select = ["E", "F", "G", "B", "I", "SIM", "TID", "PL", "RUF"]
ignore = ["E501"]
[tool.ruff.lint.isort]
known-first-party = ["defspec"]
[tool.ruff.lint.pylint]
max-args = 12

[dependency-groups]
dev = [
    "attrs>=23.2.0",
    "mypy>=1.16.1",
    "pytest>=7.4.4",
    "ruff>=0.8.6",
]
